go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@hugo_0.snap
---
source: src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkAbsURL",
      "uri": "transform/urlreplacers/absurlreplacer_test.go::BenchmarkAbsURL",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAbsURLSrcset",
      "uri": "transform/urlreplacers/absurlreplacer_test.go::BenchmarkAbsURLSrcset",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkXMLAbsURL",
      "uri": "transform/urlreplacers/absurlreplacer_test.go::BenchmarkXMLAbsURL",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkXMLAbsURLSrcset",
      "uri": "transform/urlreplacers/absurlreplacer_test.go::BenchmarkXMLAbsURLSrcset",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
