go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@hugo_2.snap
---
source: src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkHash",
      "uri": "hugolib/pagesfromdata/pagesfromgotmpl_test.go::BenchmarkHash",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
